# ai-project-template

./: .gitattributes  .gitignore  .markdownlint.yml  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.claude/: settings.json  settings.local.example.json
.claude/agents/: README.md  api-designer.md  backend-architect.md  code-reviewer.md  debugger.md  frontend-engineer.md  performance-optimizer.md  test-writer.md
.claude/hooks/: README.md  git-auto-stage.sh  security-check.sh  test-on-save.sh  validate-python.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
backend/: .env.example  CLAUDE.md  Dockerfile  README.md  manage.py  pyproject.toml  ruff.toml
backend/apps/core/: api.py
backend/apps/users/: admin.py  apps.py  models.py
backend/apps/users/migrations/: 0001_initial.py
backend/config/: api_config.py  asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: conftest.py  test_example_api.py
docs/: PRODUCTION_CHECKLIST.md
docs/development/: DEVELOPER_QUICK_START.md  PRE_COMMIT_GUIDE.md  UV_QUICK_START.md
docs/project_management/: TODO.md
frontend/: .env.example  CLAUDE.md  Dockerfile  biome.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/tests/e2e/: example.spec.ts
scripts/: deploy.sh  run-tests.sh  setup-dev.sh
